--- a/memeMe/Base.lproj/Main.storyboard
+++ b/memeMe/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" usesAttributedText="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OL3-xb-z58">
-                                                <rect key="frame" x="16" y="269" width="97" height="30"/>
+                                                <rect key="frame" x="16" y="288" width="97" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="Gyy-gZ-COe"/>
                                                     <constraint firstAttribute="width" constant="97" id="IPa-U7-xvg"/>
@@ -79,7 +79,7 @@
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="OL3-xb-z58" secondAttribute="bottom" constant="29" id="4qa-6g-Ghw"/>
+                                            <constraint firstAttribute="bottom" secondItem="OL3-xb-z58" secondAttribute="bottom" constant="10" id="4qa-6g-Ghw"/>
                                             <constraint firstAttribute="bottom" secondItem="RMY-X9-D1v" secondAttribute="bottom" id="6hm-rR-96z"/>
                                             <constraint firstAttribute="trailing" secondItem="OL3-xb-z58" secondAttribute="trailing" constant="16" id="A1O-ER-9gV"/>
                                             <constraint firstAttribute="trailing" secondItem="mXk-MW-XUA" secondAttribute="trailing" constant="16" id="CB1-Kt-NzU"/>
@@ -282,16 +282,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vSZ-uo-Cf3">
-                                <rect key="frame" x="16" y="36" width="288" height="428"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vSZ-uo-Cf3">
+                                <rect key="frame" x="-3" y="17" width="326" height="466"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="vSZ-uo-Cf3" firstAttribute="leading" secondItem="7FZ-bw-jmQ" secondAttribute="leading" constant="16" id="1bz-3Y-LVC"/>
-                            <constraint firstItem="7FZ-bw-jmQ" firstAttribute="bottom" secondItem="vSZ-uo-Cf3" secondAttribute="bottom" constant="16" id="5TF-q1-Kdx"/>
-                            <constraint firstItem="7FZ-bw-jmQ" firstAttribute="trailing" secondItem="vSZ-uo-Cf3" secondAttribute="trailing" constant="16" id="PWl-Yf-cvy"/>
-                            <constraint firstItem="vSZ-uo-Cf3" firstAttribute="top" secondItem="7FZ-bw-jmQ" secondAttribute="top" constant="16" id="SE3-6n-C9e"/>
+                            <constraint firstItem="vSZ-uo-Cf3" firstAttribute="leading" secondItem="7FZ-bw-jmQ" secondAttribute="leading" constant="-3" id="1bz-3Y-LVC"/>
+                            <constraint firstItem="7FZ-bw-jmQ" firstAttribute="bottom" secondItem="vSZ-uo-Cf3" secondAttribute="bottom" constant="-3" id="5TF-q1-Kdx"/>
+                            <constraint firstItem="7FZ-bw-jmQ" firstAttribute="trailing" secondItem="vSZ-uo-Cf3" secondAttribute="trailing" constant="-3" id="PWl-Yf-cvy"/>
+                            <constraint firstItem="vSZ-uo-Cf3" firstAttribute="top" secondItem="7FZ-bw-jmQ" secondAttribute="top" constant="-3" id="SE3-6n-C9e"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="7FZ-bw-jmQ"/>
                     </view>
